vest-dsl/test/bad/const_array_len_mismatch2.vest
const BAR: [u16; 5] = [1; 4]
